added the command functionality